--- a/index.html
+++ b/index.html
@@ -11,69 +11,30 @@
     <!-- Navigation Section -->
     <nav>
         <ul>
-            <li><a href="#underwater">Underwater</a>
+            <li><a href="underwater.html">Underwater</a>
                 <ul class="dropdown">
                     <li><a href="#">Fish</a></li>
                     <li><a href="#">Coral Reefs</a></li>
                     <li><a href="#">Sharks & Rays</a></li>
                 </ul>
             </li>
-            <li><a href="#birds">Birds</a></li>
-            <li><a href="#reptiles">Reptiles</a>
+            <li><a href="birds.html">Birds</a></li>
+            <li><a href="reptiles.html">Reptiles</a>
                 <ul class="dropdown">
                     <li><a href="#">Sea Turtles</a></li>
                     <li><a href="#">Snakes</a></li>
                     <li><a href="#">Lizards</a></li>
                 </ul>
             </li>
-            <li><a href="#landscape">Landscape</a></li>
-            <li><a href="#surfing">Surfing</a></li>
+            <li><a href="landscape.html">Landscape</a></li>
+            <li><a href="surfing.html">Surfing</a></li>
         </ul>
     </nav>
 
-    <!-- Underwater Section -->
-    <section id="underwater">
-        <h2>Underwater</h2>
-        <div class="content">
-            <p>Explore the vibrant life beneath the surface with breathtaking underwater photography.</p>
-            <!-- You can add images or more content here -->
-        </div>
-    </section>
-
-    <!-- Birds Section -->
-    <section id="birds">
-        <h2>Birds</h2>
-        <div class="content">
-            <p>Discover the beauty and elegance of birds captured in stunning photography.</p>
-            <!-- Add bird-related content here -->
-        </div>
-    </section>
-
-    <!-- Reptiles Section -->
-    <section id="reptiles">
-        <h2>Reptiles</h2>
-        <div class="content">
-            <p>Learn about the incredible reptiles that live in coastal and marine environments.</p>
-            <!-- Add reptile-related content here -->
-        </div>
-    </section>
-
-    <!-- Landscape Section -->
-    <section id="landscape">
-        <h2>Landscape</h2>
-        <div class="content">
-            <p>Experience the beauty of natural landscapes from around the world.</p>
-            <!-- Add landscape-related content here -->
-        </div>
-    </section>
-
-    <!-- Surfing Section -->
-    <section id="surfing">
-        <h2>Surfing</h2>
-        <div class="content">
-            <p>Feel the thrill of surfing through stunning photos from the world's best surf spots.</p>
-            <!-- Add surfing-related content here -->
-        </div>
+    <!-- Main Content -->
+    <section id="intro">
+        <h2>Welcome to Marine Life and Adventure Photography</h2>
+        <p>Click the categories in the navigation bar to explore beautiful photography.</p>
     </section>
 
     <!-- Footer -->
