--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Marine Life and Adventure Photography</p>
+        <p>&copy; 2024 OT3 Photography</p>
     </footer>
 
 </body>
