--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="underwater.html">Underwater</a>
                 <ul class="dropdown">
                     <li><a href="#">Fish</a></li>
-                    <li><a href="#">Coral Reefs</a></li>
+                    <li><a href="#">Invertebrates</a></li>
                     <li><a href="#">Sharks & Rays</a></li>
                 </ul>
             </li>
@@ -22,7 +22,6 @@
             <li><a href="reptiles.html">Reptiles</a>
                 <ul class="dropdown">
                     <li><a href="#">Sea Turtles</a></li>
-                    <li><a href="#">Snakes</a></li>
                     <li><a href="#">Lizards</a></li>
                 </ul>
             </li>
