--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
         <ul>
             <li><a href="underwater.html">Underwater</a>
                 <ul class="dropdown">
-                    <li><a href="#">Fish</a></li>
-                    <li><a href="#">Invertebrates</a></li>
-                    <li><a href="#">Sharks & Rays</a></li>
+                    <li><a href="underwater_fish.html">Fish</a></li>
+                    <li><a href="underwater_coral.html">Coral Reefs</a></li>
+                    <li><a href="underwater_sharks.html">Sharks & Rays</a></li>
                 </ul>
             </li>
             <li><a href="birds.html">Birds</a></li>
             <li><a href="reptiles.html">Reptiles</a>
                 <ul class="dropdown">
-                    <li><a href="#">Sea Turtles</a></li>
-                    <li><a href="#">Lizards</a></li>
+                    <li><a href="reptiles_turtles.html">Sea Turtles</a></li>
+                    <li><a href="reptiles_snakes.html">Snakes</a></li>
+                    <li><a href="reptiles_lizards.html">Lizards</a></li>
                 </ul>
             </li>
             <li><a href="landscape.html">Landscape</a></li>
@@ -38,7 +39,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 OT3 Photography</p>
+        <p>&copy; 2024 Marine Life and Adventure Photography</p>
     </footer>
 
 </body>
