--- a/birds.html
+++ b/birds.html
@@ -11,9 +11,21 @@
     <!-- Navigation Section -->
     <nav>
         <ul>
-            <li><a href="underwater.html">Underwater</a></li>
+            <li><a href="underwater.html">Underwater</a>
+                <ul class="dropdown">
+                    <li><a href="underwater_fish.html">Fish</a></li>
+                    <li><a href="underwater_coral.html">Coral Reefs</a></li>
+                    <li><a href="underwater_sharks.html">Sharks & Rays</a></li>
+                </ul>
+            </li>
             <li><a href="birds.html">Birds</a></li>
-            <li><a href="reptiles.html">Reptiles</a></li>
+            <li><a href="reptiles.html">Reptiles</a>
+                <ul class="dropdown">
+                    <li><a href="reptiles_turtles.html">Sea Turtles</a></li>
+                    <li><a href="reptiles_snakes.html">Snakes</a></li>
+                    <li><a href="reptiles_lizards.html">Lizards</a></li>
+                </ul>
+            </li>
             <li><a href="landscape.html">Landscape</a></li>
             <li><a href="surfing.html">Surfing</a></li>
         </ul>
