--- a/underwater.html
+++ b/underwater.html
@@ -11,19 +11,31 @@
     <!-- Navigation Section -->
     <nav>
         <ul>
-            <li><a href="underwater.html">Underwater</a></li>
+            <li><a href="underwater.html">Underwater</a>
+                <ul class="dropdown">
+                    <li><a href="underwater_fish.html">Fish</a></li>
+                    <li><a href="underwater_coral.html">Coral Reefs</a></li>
+                    <li><a href="underwater_sharks.html">Sharks & Rays</a></li>
+                </ul>
+            </li>
             <li><a href="birds.html">Birds</a></li>
-            <li><a href="reptiles.html">Reptiles</a></li>
+            <li><a href="reptiles.html">Reptiles</a>
+                <ul class="dropdown">
+                    <li><a href="reptiles_turtles.html">Sea Turtles</a></li>
+                    <li><a href="reptiles_snakes.html">Snakes</a></li>
+                    <li><a href="reptiles_lizards.html">Lizards</a></li>
+                </ul>
+            </li>
             <li><a href="landscape.html">Landscape</a></li>
             <li><a href="surfing.html">Surfing</a></li>
         </ul>
     </nav>
 
-    <!-- Underwater Section -->
+    <!-- Underwater Photography Section -->
     <section id="underwater">
         <h2>Underwater Photography</h2>
         <div class="content">
-            <p>Explore vibrant underwater photography capturing ocean life and more.</p>
+            <p>Explore stunning underwater scenes including fish, coral reefs, sharks, and rays.</p>
             <img src="images/underwater1.jpg" alt="Underwater 1">
             <img src="images/underwater2.jpg" alt="Underwater 2">
             <img src="images/underwater3.jpg" alt="Underwater 3">
