--- a/reptiles.html
+++ b/reptiles.html
@@ -11,22 +11,34 @@
     <!-- Navigation Section -->
     <nav>
         <ul>
-            <li><a href="underwater.html">Underwater</a></li>
+            <li><a href="underwater.html">Underwater</a>
+                <ul class="dropdown">
+                    <li><a href="underwater_fish.html">Fish</a></li>
+                    <li><a href="underwater_coral.html">Coral Reefs</a></li>
+                    <li><a href="underwater_sharks.html">Sharks & Rays</a></li>
+                </ul>
+            </li>
             <li><a href="birds.html">Birds</a></li>
-            <li><a href="reptiles.html">Reptiles</a></li>
+            <li><a href="reptiles.html">Reptiles</a>
+                <ul class="dropdown">
+                    <li><a href="reptiles_turtles.html">Sea Turtles</a></li>
+                    <li><a href="reptiles_snakes.html">Snakes</a></li>
+                    <li><a href="reptiles_lizards.html">Lizards</a></li>
+                </ul>
+            </li>
             <li><a href="landscape.html">Landscape</a></li>
             <li><a href="surfing.html">Surfing</a></li>
         </ul>
     </nav>
 
-    <!-- Reptiles Section -->
+    <!-- Reptiles Photography Section -->
     <section id="reptiles">
         <h2>Reptiles Photography</h2>
         <div class="content">
-            <p>Discover the fascinating world of reptiles captured in breathtaking photos.</p>
-            <img src="images/reptile1.jpg" alt="Reptile 1">
-            <img src="images/reptile2.jpg" alt="Reptile 2">
-            <img src="images/reptile3.jpg" alt="Reptile 3">
+            <p>Explore fascinating reptiles captured in breathtaking photographs.</p>
+            <img src="images/reptiles1.jpg" alt="Reptile 1">
+            <img src="images/reptiles2.jpg" alt="Reptile 2">
+            <img src="images/reptiles3.jpg" alt="Reptile 3">
         </div>
     </section>
 
