--- a/landscape.html
+++ b/landscape.html
@@ -11,20 +11,31 @@
     <!-- Navigation Section -->
     <nav>
         <ul>
-            <li><a href="underwater.html">Underwater</a></li>
+            <li><a href="underwater.html">Underwater</a>
+                <ul class="dropdown">
+                    <li><a href="underwater_fish.html">Fish</a></li>
+                    <li><a href="underwater_coral.html">Coral Reefs</a></li>
+                    <li><a href="underwater_sharks.html">Sharks & Rays</a></li>
+                </ul>
+            </li>
             <li><a href="birds.html">Birds</a></li>
-            <li><a href="reptiles.html">Reptiles</a></li>
+            <li><a href="reptiles.html">Reptiles</a>
+                <ul class="dropdown">
+                    <li><a href="reptiles_turtles.html">Sea Turtles</a></li>
+                    <li><a href="reptiles_snakes.html">Snakes</a></li>
+                    <li><a href="reptiles_lizards.html">Lizards</a></li>
+                </ul>
+            </li>
             <li><a href="landscape.html">Landscape</a></li>
             <li><a href="surfing.html">Surfing</a></li>
         </ul>
     </nav>
 
-    <!-- Landscape Section -->
+    <!-- Landscape Photography Section -->
     <section id="landscape">
         <h2>Landscape Photography</h2>
         <div class="content">
-            <p>Explore beautiful landscape photos from around the world.</p>
-            <!-- You can add images or more content here -->
+            <p>Explore the beauty of landscapes captured in stunning photos.</p>
             <img src="images/landscape1.jpg" alt="Landscape 1">
             <img src="images/landscape2.jpg" alt="Landscape 2">
             <img src="images/landscape3.jpg" alt="Landscape 3">
