--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="underwater.html">Underwater</a>
                 <ul class="dropdown">
                     <li><a href="underwater_fish.html">Fish</a></li>
-                    <li><a href="underwater_coral.html">Coral Reefs</a></li>
+                    <li><a href="underwater_coral.html">Invertebrates</a></li>
                     <li><a href="underwater_sharks.html">Sharks & Rays</a></li>
                 </ul>
             </li>
