--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <!-- Main Content -->
     <section id="intro">
-        <h2>Welcome to Marine Life and Adventure Photography</h2>
+        <h2>OT3 Photography</h2>
         <p>Click the categories in the navigation bar to explore beautiful photography.</p>
     </section>
 
