--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
             <li><a href="underwater.html">Underwater</a>
                 <ul class="dropdown">
                     <li><a href="underwater_fish.html">Fish</a></li>
-                    <li><a href="underwater_coral.html">Invertebrates</a></li>
-                    <li><a href="underwater_sharks.html">Sharks & Rays</a></li>
+                    <li><a href="underwater_coral.html">Coral</a></li>
+                    <li><a href="underwater_invertebrates.html">Invertebrates</a>
+                        <ul class="dropdown">
+                            <li><a href="invertebrates_1.html">Sea Anemones</a></li>
+                            <li><a href="invertebrates_2.html">Jellyfish</a></li>
+                            <li><a href="invertebrates_3.html">Crabs</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
             <li><a href="birds.html">Birds</a></li>
