--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <li><a href="underwater_fish.html">Fish</a></li>
                     <li><a href="underwater_coral.html">Coral</a></li>
                     <li><a href="underwater_invertebrates.html">Invertebrates</a>
-                        <ul class="dropdown">
+                        <ul class="dropdown-sub">
                             <li><a href="invertebrates_1.html">Sea Anemones</a></li>
                             <li><a href="invertebrates_2.html">Jellyfish</a></li>
                             <li><a href="invertebrates_3.html">Crabs</a></li>
