--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
     <!-- Navigation Section -->
     <nav>
         <ul>
-            <li><a href="underwater.html">Underwater</a>
+            <li><a href="Underwater.html">Underwater</a>
                 <ul class="dropdown">
-                    <li><a href="underwater_fish.html">Fish</a></li>
-                    <li><a href="underwater_coral.html">Coral</a></li>
-                    <li><a href="underwater_invertebrates.html">Invertebrates</a>
+                    <li><a href="Underwater_Fish.html">Fish</a></li>
+                    <li><a href="Sharks_and_Rays.html">Coral</a></li>
                         <ul class="dropdown-sub">
-                            <li><a href="invertebrates_1.html">Sea Anemones</a></li>
-                            <li><a href="invertebrates_2.html">Jellyfish</a></li>
-                            <li><a href="invertebrates_3.html">Crabs</a></li>
+                            <li><a href="Sharks_and_Rays_1.html">Sharks</a></li>
+                            <li><a href="Sharks_and_Rays_2.html">Rays</a></li>
+                    <li><a href="Underwater_Invertebrates.html">Invertebrates</a>
+                        <ul class="dropdown-sub">
+                            <li><a href="Invertebrates_1.html">Molluscs</a></li>
+                            <li><a href="Invertebrates_2.html">Cephelopods</a></li>
+                            <li><a href="Invertebrates_3.html">Crustaceans</a></li>
                         </ul>
                     </li>
                 </ul>
