--- a/index.html
+++ b/index.html
@@ -11,20 +11,47 @@
     <!-- Navigation Section -->
     <nav>
         <ul>
-            <li><a href="Underwater.html">Underwater</a>
+            <li><a href="underwater.html">Underwater</a>
                 <ul class="dropdown">
-                    <li><a href="Underwater_Fish.html">Fish</a></li>
-                    <li><a href="Sharks_and_Rays.html">Coral</a></li>
+                    <li><a href="underwater_fish.html">Fish</a>
                         <ul class="dropdown-sub">
-                            <li><a href="Sharks_and_Rays_1.html">Sharks</a></li>
-                            <li><a href="Sharks_and_Rays_2.html">Rays</a></li>
-                    <li><a href="Underwater_Invertebrates.html">Invertebrates</a>
-                        <ul class="dropdown-sub">
-                            <li><a href="Invertebrates_1.html">Molluscs</a></li>
-                            <li><a href="Invertebrates_2.html">Cephelopods</a></li>
-                            <li><a href="Invertebrates_3.html">Crustaceans</a></li>
+                            <li><a href="angelfish.html">Angelfish</a></li>
+                            <li><a href="anthias.html">Anthias</a></li>
+                            <li><a href="bigeyes.html">Bigeyes</a></li>
+                            <li><a href="blennies.html">Blennies</a></li>
+                            <li><a href="boxfish.html">Boxfish</a></li>
+                            <li><a href="butterflyfish.html">Butterfly Fish</a></li>
+                            <li><a href="cardinalfish.html">Cardinalfish</a></li>
+                            <li><a href="cornetfish.html">Cornetfish</a></li>
+                            <li><a href="cowfish.html">Cowfish</a></li>
+                            <li><a href="damselfish.html">Damselfish</a></li>
+                            <li><a href="dragonets.html">Dragonets</a></li>
+                            <li><a href="filefish.html">Filefish</a></li>
+                            <li><a href="flatfish.html">Flatfish</a></li>
+                            <li><a href="goatfish.html">Goatfish</a></li>
+                            <li><a href="gobies.html">Gobies</a></li>
+                            <li><a href="groupers.html">Groupers</a></li>
+                            <li><a href="gurnards.html">Gurnards</a></li>
+                            <li><a href="hawkfish.html">Hawkfish</a></li>
+                            <li><a href="lizardfish.html">Lizardfish</a></li>
+                            <li><a href="moorishidol.html">Moorish Idol</a></li>
+                            <li><a href="needlefish.html">Needlefish</a></li>
+                            <li><a href="parrotfish.html">Parrotfish</a></li>
+                            <li><a href="pipefish.html">Pipefish</a></li>
+                            <li><a href="porcupinefish.html">Porcupinefish</a></li>
+                            <li><a href="pufferfish.html">Pufferfish</a></li>
+                            <li><a href="razorfish.html">Razorfish</a></li>
+                            <li><a href="remoras.html">Remoras</a></li>
+                            <li><a href="sandperch.html">Sandperch</a></li>
+                            <li><a href="scorpionfish.html">Scorpionfish</a></li>
+                            <li><a href="squirrelfish.html">Squirrelfish</a></li>
+                            <li><a href="triggerfish.html">Triggerfish</a></li>
+                            <li><a href="trumpetfish.html">Trumpetfish</a></li>
+                            <li><a href="wrasse.html">Wrasse</a></li>
                         </ul>
                     </li>
+                    <li><a href="underwater_sharks.html">Sharks & Rays</a></li>
+                    <li><a href="underwater_invertebrates.html">Invertebrates</a></li>
                 </ul>
             </li>
             <li><a href="birds.html">Birds</a></li>
