--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             </li>
             <li><a href="landscape.html">Landscape</a></li>
             <li><a href="surfing.html">Surfing</a></li>
+            <li><a href="about.html">About</a></li> <!-- Added About Category -->
         </ul>
     </nav>
 
