--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             </li>
             <li><a href="landscape.html">Landscape</a></li>
             <li><a href="surfing.html">Surfing</a></li>
-            <li><a href="about.html">About</a></li> <!-- Added About Category -->
+            <li><a href="about.html">About</a></li> <!-- About Category -->
+            <li><a href="plants.html">Plants</a></li> <!-- New Plants Category -->
         </ul>
     </nav>
 
