--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
                 </ul>
             </li>
             <li><a href="birds.html">Birds</a></li>
+                <ul class="dropdown">
+                    <li><a href="hawaii.html">Hawaii</a></li>
             <li><a href="reptiles.html">Reptiles</a>
                 <ul class="dropdown">
-                    <li><a href="reptiles_turtles.html">Sea Turtles</a></li>
-                    <li><a href="reptiles_snakes.html">Snakes</a></li>
-                    <li><a href="reptiles_lizards.html">Lizards</a></li>
+                    <li><a href="hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
             <li><a href="plants.html">Plants</a></li> <!-- New Plants Category -->
+                <ul class="dropdown">
+                    <li><a href="hawaii.html">Hawaii</a></li>
             <li><a href="surfing.html">Surfing</a></li>
             <li><a href="landscape.html">Landscape</a></li>
             <li><a href="about.html">About</a></li> <!-- About Category -->
