--- a/index.html
+++ b/index.html
@@ -17,24 +17,23 @@
                     <li><a href="hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
-            <li><a href="birds.html">Birds</a></li>
-                <ul class="dropdown">
-                    <li><a href="hawaii.html">Hawaii</a></li>
-                </ul>
-            </li>
             <li><a href="reptiles.html">Reptiles</a>
                 <ul class="dropdown">
-                    <li><a href="hawaii.html">Hawaii</a></li>
+                    <li><a href="reptiles_hawaii.html">Hawaii</a></li> <!-- Hawaii subcategory for Reptiles -->
                 </ul>
             </li>
-            <li><a href="plants.html">Plants</a></li> <!-- New Plants Category -->
+            <li><a href="birds.html">Birds</a>
                 <ul class="dropdown">
-                    <li><a href="hawaii.html">Hawaii</a></li>
+                    <li><a href="birds_hawaii.html">Hawaii</a></li> <!-- Hawaii subcategory for Birds -->
+                </ul>
+            </li>
+            <li><a href="plants.html">Plants</a>
+                <ul class="dropdown">
+                    <li><a href="plants_hawaii.html">Hawaii</a></li> <!-- Hawaii subcategory for Plants -->
                 </ul>
             </li>
             <li><a href="surfing.html">Surfing</a></li>
-            <li><a href="landscape.html">Landscape</a></li>
-            <li><a href="about.html">About</a></li> <!-- About Category -->
+            <li><a href="about.html">About</a></li>
         </ul>
     </nav>
 
