--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- Navigation Section -->
     <nav>
         <ul>
+            <!-- Move About to the first position -->
+            <li><a href="about.html">About</a></li>
             <li><a href="marine_life.html">Marine Life</a>
                 <ul class="dropdown">
                     <li><a href="california.html">California</a></li>
@@ -33,7 +35,8 @@
                 </ul>
             </li>
             <li><a href="surfing.html">Surfing</a></li>
-            <li><a href="about.html">About</a></li>
+            <!-- Add the new Contact category at the end -->
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
