--- a/reptiles.html
+++ b/reptiles.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reptiles Photography</title>
+    <title>Reptiles - OT3 Photography</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,40 +11,46 @@
     <!-- Navigation Section -->
     <nav>
         <ul>
-            <li><a href="underwater.html">Underwater</a>
+            <li><a href="about.html">About</a></li>
+            <li><a href="marine_life.html">Marine Life</a>
                 <ul class="dropdown">
-                    <li><a href="underwater_fish.html">Fish</a></li>
-                    <li><a href="underwater_coral.html">Coral Reefs</a></li>
-                    <li><a href="underwater_sharks.html">Sharks & Rays</a></li>
+                    <li><a href="california.html">California</a></li>
+                    <li><a href="hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
-            <li><a href="birds.html">Birds</a></li>
-            <li><a href="reptiles.html">Reptiles</a>
+            <li><a href="reptiles.html" class="active">Reptiles</a>
                 <ul class="dropdown">
-                    <li><a href="reptiles_turtles.html">Sea Turtles</a></li>
-                    <li><a href="reptiles_snakes.html">Snakes</a></li>
-                    <li><a href="reptiles_lizards.html">Lizards</a></li>
+                    <li><a href="reptiles_hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
-            <li><a href="landscape.html">Landscape</a></li>
+            <li><a href="birds.html">Birds</a>
+                <ul class="dropdown">
+                    <li><a href="birds_hawaii.html">Hawaii</a></li>
+                </ul>
+            </li>
+            <li><a href="plants.html">Plants</a>
+                <ul class="dropdown">
+                    <li><a href="plants_hawaii.html">Hawaii</a></li>
+                </ul>
+            </li>
             <li><a href="surfing.html">Surfing</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
-    <!-- Reptiles Photography Section -->
+    <!-- Main Content for Reptiles -->
     <section id="reptiles">
         <h2>Reptiles Photography</h2>
-        <div class="content">
-            <p>Explore fascinating reptiles captured in breathtaking photographs.</p>
-            <img src="images/reptiles1.jpg" alt="Reptile 1">
-            <img src="images/reptiles2.jpg" alt="Reptile 2">
-            <img src="images/reptiles3.jpg" alt="Reptile 3">
+        <p>Explore reptiles in Hawaii, showcasing the unique species found in the islands.</p>
+
+        <div class="region-links">
+            <a href="reptiles_hawaii.html" class="region-button">Hawaii</a>
         </div>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Marine Life and Adventure Photography</p>
+        <p>&copy; 2024 OT3 Photography</p>
     </footer>
 
 </body>
