--- a/surfing.html
+++ b/surfing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Surfing Photography</title>
+    <title>Surfing - OT3 Photography</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,37 +11,47 @@
     <!-- Navigation Section -->
     <nav>
         <ul>
-            <li><a href="underwater.html">Underwater</a>
+            <li><a href="about.html">About</a></li>
+            <li><a href="marine_life.html">Marine Life</a>
                 <ul class="dropdown">
-                    <li><a href="underwater_fish.html">Fish</a></li>
-                    <li><a href="underwater_coral.html">Coral Reefs</a></li>
-                    <li><a href="underwater_sharks.html">Sharks & Rays</a></li>
+                    <li><a href="california.html">California</a></li>
+                    <li><a href="hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
-            <li><a href="birds.html">Birds</a></li>
             <li><a href="reptiles.html">Reptiles</a>
                 <ul class="dropdown">
-                    <li><a href="reptiles_turtles.html">Sea Turtles</a></li>
-                    <li><a href="reptiles_snakes.html">Snakes</a></li>
-                    <li><a href="reptiles_lizards.html">Lizards</a></li>
+                    <li><a href="reptiles_hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
-            <li><a href="landscape.html">Landscape</a></li>
-            <li><a href="surfing.html">Surfing</a></li>
+            <li><a href="birds.html">Birds</a>
+                <ul class="dropdown">
+                    <li><a href="birds_hawaii.html">Hawaii</a></li>
+                </ul>
+            </li>
+            <li><a href="plants.html">Plants</a>
+                <ul class="dropdown">
+                    <li><a href="plants_hawaii.html">Hawaii</a></li>
+                </ul>
+            </li>
+            <li><a href="surfing.html" class="active">Surfing</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
-    <!-- Surfing Photography Section -->
+    <!-- Main Content for Surfing -->
     <section id="surfing">
         <h2>Surfing Photography</h2>
-        <div class="content">
-            <p>Experience the thrill of surfing through stunning action-packed photography.</p>
-            <img src="images/surfing1.jpg" alt="Surfing 1">
-            <img src="images/surfing2.jpg" alt="Surfing 2">
-            <img src="images/surfing3.jpg" alt="Surfing 3">
+        <p>Experience the thrilling surf culture of Hawaii with our stunning photos.</p>
+
+        <div class="region-links">
+            <a href="surfing_hawaii.html" class="region-button">Hawaii</a>
         </div>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 
+        <p>&copy; 2024 OT3 Photography</p>
+    </footer>
+
+</body>
+</html>
