--- a/reptiles.html
+++ b/reptiles.html
@@ -41,7 +41,7 @@
     <!-- Main Content for Reptiles -->
     <section id="reptiles">
         <h2>Reptiles Photography</h2>
-        <p>Explore reptiles in Hawaii, showcasing the unique species found in the islands.</p>
+        <p>Discover the fascinating reptiles of Hawaii, from sea turtles to unique lizards.</p>
 
         <div class="region-links">
             <a href="reptiles_hawaii.html" class="region-button">Hawaii</a>
