--- a/Marine_Life.html
+++ b/Marine_Life.html
@@ -20,17 +20,17 @@
             </li>
             <li><a href="reptiles.html">Reptiles</a>
                 <ul class="dropdown">
-                    <li><a href="reptiles_hawaii.html">Hawaii</a></li> <!-- Hawaii subcategory for Reptiles -->
+                    <li><a href="reptiles_hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
             <li><a href="birds.html">Birds</a>
                 <ul class="dropdown">
-                    <li><a href="birds_hawaii.html">Hawaii</a></li> <!-- Hawaii subcategory for Birds -->
+                    <li><a href="birds_hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
             <li><a href="plants.html">Plants</a>
                 <ul class="dropdown">
-                    <li><a href="plants_hawaii.html">Hawaii</a></li> <!-- Hawaii subcategory for Plants -->
+                    <li><a href="plants_hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
             <li><a href="surfing.html">Surfing</a></li>
@@ -41,7 +41,7 @@
     <!-- Main Content for Marine Life -->
     <section id="marine-life">
         <h2>Marine Life Photography</h2>
-        <p>Explore marine life from two stunning regions: California and Hawaii.</p>
+        <p>Explore the beauty of marine life, from vibrant underwater creatures to fascinating sea plants.</p>
 
         <div class="region-links">
             <a href="california.html" class="region-button">California</a>
