--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li><a href="birds_hawaii.html">Hawaii</a></li> <!-- Hawaii subcategory for Birds -->
                 </ul>
             </li>
-            <li><a href="plants.html">Plants</a>
+            <li><a href="Plants.html">Plants</a>
                 <ul class="dropdown">
                     <li><a href="plants_hawaii.html">Hawaii</a></li> <!-- Hawaii subcategory for Plants -->
                 </ul>
