--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
             <!-- Move About to the first position -->
             <li><a href="about.html">About</a></li>
-            <li><a href="Marine_Life.html">Marine Life</a>
+            <li><a href="marine_life.html">Marine Life</a>
                 <ul class="dropdown">
                     <li><a href="california.html">California</a></li>
                     <li><a href="hawaii.html">Hawaii</a></li>
@@ -24,12 +24,12 @@
                     <li><a href="reptiles_hawaii.html">Hawaii</a></li> <!-- Hawaii subcategory for Reptiles -->
                 </ul>
             </li>
-            <li><a href="Birds.html">Birds</a>
+            <li><a href="birds.html">Birds</a>
                 <ul class="dropdown">
                     <li><a href="birds_hawaii.html">Hawaii</a></li> <!-- Hawaii subcategory for Birds -->
                 </ul>
             </li>
-            <li><a href="Plants.html">Plants</a>
+            <li><a href="plants.html">Plants</a>
                 <ul class="dropdown">
                     <li><a href="plants_hawaii.html">Hawaii</a></li> <!-- Hawaii subcategory for Plants -->
                 </ul>
