--- a/marine_life.html
+++ b/marine_life.html
@@ -4,45 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marine Life - OT3 Photography</title>
-    <link rel="stylesheet" href="../style.css"> <!-- Adjusted to go up one level to find style.css -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <!-- Navigation Section -->
     <nav>
         <ul>
-            <!-- Move About to the first position -->
-            <li><a href="../about.html">About</a></li>
-            <li><a href="../pages/marine_life/marine_life.html">Marine Life</a>
+            <li><a href="about.html">About</a></li>
+            <li><a href="marine_life.html" class="active">Marine Life</a>
                 <ul class="dropdown">
-                    <li><a href="../pages/marine_life/california.html">California</a></li>
-                    <li><a href="../pages/marine_life/hawaii.html">Hawaii</a></li>
+                    <li><a href="california.html">California</a></li>
+                    <li><a href="hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
-            <li><a href="../pages/reptiles/reptiles.html">Reptiles</a>
+            <li><a href="reptiles.html">Reptiles</a>
                 <ul class="dropdown">
-                    <li><a href="../pages/reptiles/reptiles_hawaii.html">Hawaii</a></li>
+                    <li><a href="reptiles_hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
-            <li><a href="../pages/birds/birds.html">Birds</a>
+            <li><a href="birds.html">Birds</a>
                 <ul class="dropdown">
-                    <li><a href="../pages/birds/birds_hawaii.html">Hawaii</a></li>
+                    <li><a href="birds_hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
-            <li><a href="../pages/plants/plants.html">Plants</a>
+            <li><a href="plants.html">Plants</a>
                 <ul class="dropdown">
-                    <li><a href="../pages/plants/plants_hawaii.html">Hawaii</a></li>
+                    <li><a href="plants_hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
-            <li><a href="../pages/surfing/surfing.html">Surfing</a></li>
-            <li><a href="../contact.html">Contact</a></li>
+            <li><a href="surfing.html">Surfing</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
-    <!-- Main Content -->
-    <section id="intro">
-        <h2>Marine Life - OT3 Photography</h2>
-        <p>Explore the beauty of marine life through stunning photography. Choose a location to see the amazing creatures and landscapes that make up the ocean's ecosystem.</p>
+    <!-- Main Content for Marine Life -->
+    <section id="marine-life">
+        <h2>Marine Life Photography</h2>
+        <p>Explore the beauty of marine life, from vibrant underwater creatures to fascinating sea plants.</p>
+
+        <div class="region-links">
+            <a href="california.html" class="region-button">California</a>
+            <a href="hawaii.html" class="region-button">Hawaii</a>
+        </div>
     </section>
 
     <!-- Footer -->
