--- a/base/about.html
+++ b/base/about.html
@@ -4,20 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - OT3 Photography</title>
-    <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="../style.css"> <!-- Adjusted to go up one level to find style.css -->
 </head>
 <body>
 
     <!-- Navigation Section -->
+   <!-- Navigation Section -->
     <nav>
         <ul>
-            <li><a href="marine_life.html">Marine Life</a></li>
-            <li><a href="birds.html">Birds</a></li>
-            <li><a href="reptiles.html">Reptiles</a></li>
-            <li><a href="landscape.html">Landscape</a></li>
-            <li><a href="surfing.html">Surfing</a></li>
-            <li><a href="about.html" class="active">About</a></li> <!-- Active Link for About -->
-            <li><a href="plants.html">Plants</a></li>
+            <!-- Move About to the first position -->
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../pages/marine_life/marine_life.html">Marine Life</a>
+                <ul class="dropdown">
+                    <li><a href="../pages/marine_life/california.html">California</a></li>
+                    <li><a href="../pages/marine_life/hawaii.html">Hawaii</a></li>
+                </ul>
+            </li>
+            <li><a href="../pages/reptiles/reptiles.html">Reptiles</a>
+                <ul class="dropdown">
+                    <li><a href="../pages/reptiles/reptiles_hawaii.html">Hawaii</a></li>
+                </ul>
+            </li>
+            <li><a href="../pages/birds/birds.html">Birds</a>
+                <ul class="dropdown">
+                    <li><a href="../pages/birds/birds_hawaii.html">Hawaii</a></li>
+                </ul>
+            </li>
+            <li><a href="../pages/plants/plants.html">Plants</a>
+                <ul class="dropdown">
+                    <li><a href="../pages/plants/plants_hawaii.html">Hawaii</a></li>
+                </ul>
+            </li>
+            <li><a href="../pages/surfing/surfing.html">Surfing</a></li>
+            <li><a href="../contact.html">Contact</a></li>
         </ul>
     </nav>
 
