--- a/base/about.html
+++ b/base/about.html
@@ -13,30 +13,30 @@
     <nav>
         <ul>
             <!-- Move About to the first position -->
-            <li><a href="base/about.html">About</a></li>
-            <li><a href="base/pages/marine_life/marine_life.html">Marine Life</a>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../pages/marine_life/marine_life.html">Marine Life</a>
                 <ul class="dropdown">
-                    <li><a href="base/pages/marine_life/california.html">California</a></li>
-                    <li><a href="base/pages/marine_life/hawaii.html">Hawaii</a></li>
+                    <li><a href="../pages/marine_life/california.html">California</a></li>
+                    <li><a href="../pages/marine_life/hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
-            <li><a href="base/pages/reptiles/reptiles.html">Reptiles</a>
+            <li><a href="../pages/reptiles/reptiles.html">Reptiles</a>
                 <ul class="dropdown">
-                    <li><a href="base/pages/reptiles/reptiles_hawaii.html">Hawaii</a></li>
+                    <li><a href="../pages/reptiles/reptiles_hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
-            <li><a href="base/pages/birds/birds.html">Birds</a>
+            <li><a href="../pages/birds/birds.html">Birds</a>
                 <ul class="dropdown">
-                    <li><a href="base/pages/birds/birds_hawaii.html">Hawaii</a></li>
+                    <li><a href="../pages/birds/birds_hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
-            <li><a href="base/pages/plants/plants.html">Plants</a>
+            <li><a href="../pages/plants/plants.html">Plants</a>
                 <ul class="dropdown">
-                    <li><a href="base/pages/plants/plants_hawaii.html">Hawaii</a></li>
+                    <li><a href="../pages/plants/plants_hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
-            <li><a href="base/pages/surfing/surfing.html">Surfing</a></li>
-            <li><a href="base/contact.html">Contact</a></li>
+            <li><a href="../pages/surfing/surfing.html">Surfing</a></li>
+            <li><a href="../contact.html">Contact</a></li>
         </ul>
     </nav>
 
