--- a/base/about.html
+++ b/base/about.html
@@ -14,28 +14,28 @@
         <ul>
             <!-- Move About to the first position -->
             <li><a href="../about.html">About</a></li>
-            <li><a href="../pages/marine_life/marine_life.html">Marine Life</a>
+            <li><a href="../base/marine_life/marine_life.html">Marine Life</a>
                 <ul class="dropdown">
-                    <li><a href="../pages/marine_life/california.html">California</a></li>
-                    <li><a href="../pages/marine_life/hawaii.html">Hawaii</a></li>
+                    <li><a href="../base/marine_life/california.html">California</a></li>
+                    <li><a href="../base/marine_life/hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
-            <li><a href="../pages/reptiles/reptiles.html">Reptiles</a>
+            <li><a href="../base/reptiles/reptiles.html">Reptiles</a>
                 <ul class="dropdown">
-                    <li><a href="../pages/reptiles/reptiles_hawaii.html">Hawaii</a></li>
+                    <li><a href="../base/reptiles/reptiles_hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
-            <li><a href="../pages/birds/birds.html">Birds</a>
+            <li><a href="../base/birds/birds.html">Birds</a>
                 <ul class="dropdown">
                     <li><a href="../pages/birds/birds_hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
-            <li><a href="../pages/plants/plants.html">Plants</a>
+            <li><a href="../base/plants/plants.html">Plants</a>
                 <ul class="dropdown">
-                    <li><a href="../pages/plants/plants_hawaii.html">Hawaii</a></li>
+                    <li><a href="../base/plants/plants_hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
-            <li><a href="../pages/surfing/surfing.html">Surfing</a></li>
+            <li><a href="../base/surfing/surfing.html">Surfing</a></li>
             <li><a href="../contact.html">Contact</a></li>
         </ul>
     </nav>
