--- a/base/marine_life.html
+++ b/base/marine_life.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marine Life - OT3 Photography</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css"> <!-- Adjusted to go up one level to find style.css -->
 </head>
 <body>
 
