--- a/base/reptiles.html
+++ b/base/reptiles.html
@@ -44,7 +44,7 @@
         <p>Discover the fascinating reptiles of Hawaii, from sea turtles to unique lizards.</p>
 
         <div class="region-links">
-            <a href="reptiles_hawaii.html" class="region-button">Hawaii</a>
+            <a href="base/reptiles_hawaii.html" class="region-button">Hawaii</a>
         </div>
     </section>
 
