--- a/base/contact.html
+++ b/base/contact.html
@@ -9,15 +9,33 @@
 <body>
 
     <!-- Navigation Section -->
-    <nav>
+   <nav>
         <ul>
-            <li><a href="about.html">About</a></li>
-            <li><a href="marine_life.html">Marine Life</a></li>
-            <li><a href="reptiles.html">Reptiles</a></li>
-            <li><a href="birds.html">Birds</a></li>
-            <li><a href="plants.html">Plants</a></li>
-            <li><a href="surfing.html">Surfing</a></li>
-            <li><a href="contact.html" class="active">Contact</a></li> <!-- Active Link for Contact -->
+            <!-- Move About to the first position -->
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../base/marine_life.html">Marine Life</a>
+                <ul class="dropdown">
+                    <li><a href="../base/marine_life/california.html">California</a></li>
+                    <li><a href="../base/marine_life/hawaii.html">Hawaii</a></li>
+                </ul>
+            </li>
+            <li><a href="../base/reptiles.html">Reptiles</a>
+                <ul class="dropdown">
+                    <li><a href="../base/reptiles_hawaii.html">Hawaii</a></li>
+                </ul>
+            </li>
+            <li><a href="../base/birds.html">Birds</a>
+                <ul class="dropdown">
+                    <li><a href="../base/birds_hawaii.html">Hawaii</a></li>
+                </ul>
+            </li>
+            <li><a href="../base/plants.html">Plants</a>
+                <ul class="dropdown">
+                    <li><a href="../base/plants_hawaii.html">Hawaii</a></li>
+                </ul>
+            </li>
+            <li><a href="../base/surfing.html">Surfing</a></li>
+            <li><a href="../base/contact.html">Contact</a></li>
         </ul>
     </nav>
 
