--- a/base/reptiles.html
+++ b/base/reptiles.html
@@ -12,7 +12,7 @@
    <nav>
         <ul>
             <!-- Move About to the first position -->
-            <li><a href="../about.html">About</a></li>
+            <li><a href="../base/about.html">About</a></li>
             <li><a href="../base/marine_life.html">Marine Life</a>
                 <ul class="dropdown">
                     <li><a href="../base/marine_life/california.html">California</a></li>
