--- a/pages/about.html
+++ b/pages/about.html
@@ -13,30 +13,30 @@
     <nav>
         <ul>
             <!-- Move About to the first position -->
-            <li><a href="../about.html">About</a></li>
-            <li><a href="../base/marine_life.html">Marine Life</a>
+            <li><a href="../pages/about.html">About</a></li>
+            <li><a href="../pages/marine_life.html">Marine Life</a>
                 <ul class="dropdown">
-                    <li><a href="../base/marine_life/california.html">California</a></li>
-                    <li><a href="../base/marine_life/hawaii.html">Hawaii</a></li>
+                    <li><a href="../pages/marine_life/california.html">California</a></li>
+                    <li><a href="../pages/marine_life/hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
-            <li><a href="../base/reptiles.html">Reptiles</a>
+            <li><a href="../pages/reptiles.html">Reptiles</a>
                 <ul class="dropdown">
-                    <li><a href="../base/reptiles_hawaii.html">Hawaii</a></li>
+                    <li><a href="../pages/reptiles_hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
-            <li><a href="../base/birds.html">Birds</a>
+            <li><a href="../pages/birds.html">Birds</a>
                 <ul class="dropdown">
-                    <li><a href="../base/birds_hawaii.html">Hawaii</a></li>
+                    <li><a href="../pages/birds_hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
-            <li><a href="../base/plants.html">Plants</a>
+            <li><a href="../pages/plants.html">Plants</a>
                 <ul class="dropdown">
-                    <li><a href="../base/plants_hawaii.html">Hawaii</a></li>
+                    <li><a href="../pages/plants_hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
-            <li><a href="../base/surfing.html">Surfing</a></li>
-            <li><a href="../base/contact.html">Contact</a></li>
+            <li><a href="../pages/surfing.html">Surfing</a></li>
+            <li><a href="../pages/contact.html">Contact</a></li>
         </ul>
     </nav>
 
