--- a/index.html
+++ b/index.html
@@ -12,31 +12,31 @@
     <nav>
         <ul>
             <!-- Move About to the first position -->
-            <li><a href="base/about.html">About</a></li>
-            <li><a href="base/marine_life.html">Marine Life</a>
+            <li><a href="pages/about.html">About</a></li>
+            <li><a href="pages/marine_life.html">Marine Life</a>
                 <ul class="dropdown">
                     <li><a href="california.html">California</a></li>
                     <li><a href="hawaii.html">Hawaii</a></li>
                 </ul>
             </li>
-            <li><a href="base/reptiles.html">Reptiles</a>
+            <li><a href="pages/reptiles.html">Reptiles</a>
                 <ul class="dropdown">
                     <li><a href="reptiles_hawaii.html">Hawaii</a></li> <!-- Hawaii subcategory for Reptiles -->
                 </ul>
             </li>
-            <li><a href="base/birds.html">Birds</a>
+            <li><a href="pages/birds.html">Birds</a>
                 <ul class="dropdown">
                     <li><a href="birds_hawaii.html">Hawaii</a></li> <!-- Hawaii subcategory for Birds -->
                 </ul>
             </li>
-            <li><a href="base/plants.html">Plants</a>
+            <li><a href="pages/plants.html">Plants</a>
                 <ul class="dropdown">
                     <li><a href="plants_hawaii.html">Hawaii</a></li> <!-- Hawaii subcategory for Plants -->
                 </ul>
             </li>
-            <li><a href="base/surfing.html">Surfing</a></li>
+            <li><a href="pages/surfing.html">Surfing</a></li>
             <!-- Add the new Contact category at the end -->
-            <li><a href="base/contact.html">Contact</a></li>
+            <li><a href="pages/contact.html">Contact</a></li>
         </ul>
     </nav>
 
