--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,11 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - OT3 Photography</title>
    <link rel="stylesheet" href="../style.css"> <!-- Adjusted to go up one level to find style.css -->
+   <style>
+       /* Center the Contact Section */
+       body, html {
+           margin: 0;
+           padding: 0;
+           height: 100%;
+       }
+
+       #contact {
+           display: flex;
+           flex-direction: column;
+           justify-content: center;
+           align-items: center;
+           height: 100vh; /* Full viewport height */
+           text-align: center; /* Center-align text */
+       }
+
+       #contact form {
+           margin-top: 20px;
+           display: flex;
+           flex-direction: column;
+           align-items: center;
+       }
+
+       #contact form input,
+       #contact form textarea {
+           width: 300px; /* Consistent input width */
+           padding: 8px;
+           margin: 5px 0;
+           border: 1px solid #ccc;
+           border-radius: 5px;
+       }
+
+       #contact form input[type="submit"] {
+           width: auto;
+           background-color: #333;
+           color: white;
+           border: none;
+           cursor: pointer;
+           padding: 10px 20px;
+       }
+
+       #contact form input[type="submit"]:hover {
+           background-color: #575757;
+       }
+   </style>
 </head>
 <body>
 
     <!-- Navigation Section -->
-   <nav>
+    <nav>
         <ul>
             <!-- Move About to the first position -->
             <li><a href="../pages/about.html">About</a></li>
@@ -35,32 +81,4 @@
                 </ul>
             </li>
             <li><a href="../pages/surfing.html">Surfing</a></li>
-            <li><a href="../pages/contact.html">Contact</a></li>
-        </ul>
-    </nav>
-
-    <!-- Contact Section -->
-    <section id="contact">
-        <h2>Contact OT3 Photography</h2>
-        <p>Feel free to reach out for any inquiries or collaborations.</p>
-        <form action="submit_form.php" method="post">
-            <label for="name">Your Name:</label><br>
-            <input type="text" id="name" name="name" required><br><br>
-
-            <label for="email">Your Email:</label><br>
-            <input type="email" id="email" name="email" required><br><br>
-
-            <label for="message">Message:</label><br>
-            <textarea id="message" name="message" rows="4" cols="50" required></textarea><br><br>
-
-            <input type="submit" value="Send Message">
-        </form>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2024 OT3 Photography</p>
-    </footer>
-
-</body>
-</html>
+           
