--- a/pages/contact.html
+++ b/pages/contact.html
@@ -81,4 +81,32 @@
                 </ul>
             </li>
             <li><a href="../pages/surfing.html">Surfing</a></li>
-           
+            <li><a href="../pages/contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact OT3 Photography</h2>
+        <p>Feel free to reach out for any inquiries or collaborations.</p>
+        <form action="submit_form.php" method="post">
+            <label for="name">Your Name:</label><br>
+            <input type="text" id="name" name="name" required><br>
+
+            <label for="email">Your Email:</label><br>
+            <input type="email" id="email" name="email" required><br>
+
+            <label for="message">Message:</label><br>
+            <textarea id="message" name="message" rows="4" cols="50" required></textarea><br>
+
+            <input type="submit" value="Send Message">
+        </form>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 OT3 Photography</p>
+    </footer>
+
+</body>
+</html>
