--- a/pages/contact.html
+++ b/pages/contact.html
@@ -50,7 +50,113 @@
        #contact form input[type="submit"]:hover {
            background-color: #575757;
        }
-   </style>
+  <style>
+    /* General Reset */
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+
+    html, body {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+    }
+
+    /* Navigation Bar */
+    nav ul {
+        list-style: none;
+        display: flex;
+        justify-content: flex-start;
+        background-color: #333;
+        padding: 10px 0;
+    }
+
+    nav ul li {
+        position: relative;
+    }
+
+    nav ul li a {
+        color: white;
+        text-decoration: none;
+        padding: 10px 20px;
+        display: block;
+    }
+
+    nav ul li a:hover {
+        background-color: #575757;
+    }
+
+    /* Dropdown */
+    nav ul li .dropdown {
+        display: none;
+        position: absolute;
+        background-color: #333;
+        top: 100%;
+        left: 0;
+        list-style: none;
+        padding: 0;
+    }
+
+    nav ul li:hover .dropdown {
+        display: block;
+    }
+
+    nav ul li .dropdown li a {
+        padding: 10px;
+        white-space: nowrap;
+    }
+
+    /* Main Contact Section */
+    #contact {
+        flex: 1; /* Ensures the content expands to fill available space */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 20px;
+    }
+
+    #contact form {
+        margin-top: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #contact form input,
+    #contact form textarea {
+        width: 300px;
+        padding: 8px;
+        margin: 5px 0;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+    }
+
+    #contact form input[type="submit"] {
+        background-color: #333;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        cursor: pointer;
+    }
+
+    #contact form input[type="submit"]:hover {
+        background-color: #575757;
+    }
+
+    /* Footer */
+    footer {
+        background-color: #333;
+        color: white;
+        text-align: center;
+        padding: 10px;
+    }
+</style>
+
 </head>
 <body>
 
